--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,29 @@
 <app-header />
 <main>
   <ul id="users">
+    @for(user of users; track user.id) {
     <li>
-      <app-user
-        [id]="users[0].id"
-        [avatar]="users[0].avatar"
-        [name]="users[0].name"
-        (select)="onSelectUser($event)"
-      />
+      <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
-    <li>
-      <app-user
-        [id]="users[1].id"
-        [avatar]="users[1].avatar"
-        [name]="users[1].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user
-        [id]="users[2].id"
-        [avatar]="users[2].avatar"
-        [name]="users[2].name"
-        (select)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user
-        [id]="users[3].id"
-        [avatar]="users[3].avatar"
-        [name]="users[3].name"
-        (select)="onSelectUser($event)"
-      />
+    }
+  </ul>
+
+  @if(selectedUser()) {
+  <app-tasks [name]="this.selectedUser()?.name" />
+  } @else {
+  <p>Select a user to see their tasks!</p>
+  }
+
+  <!-- <ul id="users">
+    <li *ngFor="let user of users">
+      <app-user [user]="user" (select)="onSelectUser($event)" />
     </li>
   </ul>
-  <app-tasks [name]="this.selectedUser()?.name" />
+  <app-tasks
+    *ngIf="selectedUser(); else fallback"
+    [name]="this.selectedUser()!.name"
+  />
+  <ng-template #fallback>
+    <p id="fallback">Select a user to see their tasks!</p>
+  </ng-template> -->
 </main>
