--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button (click)="onSelectUser()">
+  <button [class.active]="isUserSelected()" (click)="onSelectUser()">
     <img [src]="imagePath()" [alt]="user().name" />
     <span>{{ user().name }}</span>
   </button>
