--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,10 +1,10 @@
 @if(showNewTaskForm) {
-<app-new-task (cancel)="onCancelAddTask()" (addTask)="onAddTask($event)" />
+<app-new-task [userId]="userId()" (close)="onCloseAddTask()" />
 }
 
 <section id="tasks">
   <header>
-    <h2>{{ name() }}'s Tasks</h2>
+    <h2>{{ userName() }}'s Tasks</h2>
     <menu>
       <button (click)="onStartAddTask()">Add Task</button>
     </menu>
@@ -13,7 +13,7 @@
   <ul>
     @for(task of selectedUserTasks; track task.id) {
     <li>
-      <app-task [task]="task" (complete)="onCompleteTask($event)" />
+      <app-task [task]="task" />
     </li>
     }
   </ul>
